--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 .name
 	{font-size:24px}
 .incline
-	{font-style:italic;font-family:Arial}
+	{font-style:italic;
+	 font-size:11pt;
+	 font-family:Arial,"\6977 \4F53 "}
 .bolder
 	{font-weight:bold}
 .red
@@ -201,7 +203,16 @@
 <div id="div_news">
 <p class="Bolder">What's New </p>
 
-<p><span class="style11">(27/04/2021) One paper on GPU cluster scheduling is accepted by IEEE Trans. on Parallel and Distributed Systems (TPDS).  
+<p><span class="style11">(13/08/2021) Our work on malware detection through Graph Attention Networks is accepted by IEEE Trans. on Neural Networks and Learning Systems (TNNLS). 
+</span></p>
+
+<p><span class="style11">(10/07/2021) I will serve as PC member for AAAI Conference on Artificial Intelligence 2022 (AAAI'22), International Joint Conferences on Artificial Intelligence 2022 (IJCAI'22) and European Conference on Artificial Intelligence (ECAI'22).
+</span></p>
+
+<p><span class="style11">(20/06/2021) Our work on joint optmization of cache placement and request routing is accepted by Journal of Parallel and Distributed Computing (JPDC).  
+</span></p>
+
+<p><span class="style11">(27/04/2021) Our work on GPU cluster scheduling is accepted by IEEE Trans. on Parallel and Distributed Systems (TPDS).  
 </span></p>
 
 <p><span class="style11">(23/02/2021) I will serve as Track Chair for IEEE International Conference on Cloud Computing (CLOUD'21). See the <a href ="https://conferences.computer.org/cloud/2021/cfp/">Call for Papers</a> 
@@ -222,7 +233,7 @@
 <div id="div_bio">
 
 <p class="Bolder">Short Bio</p> 
-<p><span class="style11"> I am currently a research fellow, funded by a UK EPSRC grant, with the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. I was a research scientist at <a href="http://www.edgetic.com">Edgetic Ltd.</a>, a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
+<p><span class="style11"> I am currently a UK EPSRC-funded research fellow at the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. I was a research scientist at <a href="http://www.edgetic.com">Edgetic Ltd.</a>, a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
 I have been leading several China/UK national and international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
 1) scalable and intelligent resource scheduling at Internet scale; 
 2) system dependability by leveraging effective system failover, long-tail task mitigation, and quantitative reliability modeling etc.; 
@@ -230,7 +241,7 @@ I have been leading several China/UK national and international projects in term
 and 4) applied machine/deep learning for representation learning, anomaly detection, etc. 
 </span></p>
 
-<p><span class="style11">  I has published more than 40 peer-reviewed papers, in the field of distributed systems, cloud computing, big data analytics and applied deep learning techniques. They appear in top journals and conference proceedings such as IEEE Transactions on Parallel and Distributed Systems (TPDS), IEEE Transactions on Computers (TC), IEEE Transactions on Knowledge and Data Engineering (TKDE), IEEE Transactions on Services Computing (TSC), ACM Transactions on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of my work won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participation and contribution to the reliable resource management and scheduling at massive scale.  
+<p><span class="style11">  I has published more than 40 peer-reviewed papers, in the field of distributed systems, cloud computing, big data analytics and applied deep learning techniques. They appear in top journals and conference proceedings such as IEEE Trans. on Parallel and Distributed Systems (TPDS), IEEE Trans. on Computers (TC), IEEE Trans. on Knowledge and Data Engineering (TKDE), IEEE Trans. on Neural Networks and Learning Systems (TNNLS), IEEE Trans. on Services Computing (TSC), ACM Trans. on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. One of my work won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participation and contribution to the reliable resource management and scheduling at massive scale.  
 	</span></p>
 
 <p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I co-founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group in COLAB. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE.
@@ -253,21 +264,22 @@ and 4) applied machine/deep learning for representation learning, anomaly detect
 
 <p><span class="style11">&bull;  2007.9 - 2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Dr. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&bull;  2011.9 - 2017.1: &nbsp;&nbsp; PhD. Computer Science (with Honor), Supervised by Prof. Jie Xu, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&bull;  2011.9 - 2017.1: &nbsp;&nbsp; PhD. Computer Science (with Distinction Honor), Supervised by Prof. Jie Xu, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&bull;  2012.10 - 2013.1, 2013.12 and 2016.3: &nbsp;  Visiting Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
+<p><span class="style11">&bull;  2012.10 - 2013.1, 2013.11-2013.12 and 2016.3-2016.4: &nbsp;  Exchange PhD. Student (Supervised by <a href="http://www.paultownend.com/">Dr. Paul Townend </a> and Prof. Jie Xu), &nbsp; <a href="http://www.leeds.ac.uk" target="_blank"> University of Leeds</a>, UK &nbsp;&nbsp; </span></p>
 
 <p><span class="Bolder">Academia & Industry Experience  </span></p>
 
 <p><span class="style11">&bull; 2011.9 - 2017.2: &nbsp; Teaching and Research Assistant, Team Leader, SIGRS and MSDS, Beihang University, Beijing, China &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&bull;  2014.2 - 2016.2: &nbsp;&nbsp; R&D Intern (Mentored by Mr. <a href = "https://www.linkedin.com/in/zhuo-zhang-24913433">Zhuo Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b">Chao Li</a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
+<p><span class="style11">&bull; 2014.2 - 2016.2: &nbsp;&nbsp; R&D Intern (Mentored by <a href = "https://www.linkedin.com/in/zhuo-joe-zhang-24913433">Zhuo (Joe) Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b">Chao Li</a>), Fuxi Distributed Scheduling Group, Apsara, <a href="http://www.aliyun.com"> Alibaba Cloud Computing Inc.</a>, Beijing, China &nbsp;&nbsp; &nbsp;</span></p>
 
-<p><span class="style11">&bull; 2016.4 - 2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
+<p><span class="style11">&bull; 2016.4 - 2016.5: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
 <p><span class="style11">&bull; 2017.3 - 2018.3: &nbsp;&nbsp; Research Scientist and Project Director, Big Data and Brain Computing Research Center (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
  
-<p><span class="style11">&bull; 2018.3 - 2020.8: &nbsp;&nbsp; Research Scientist, Edgetic Ltd., UK &nbsp;&nbsp;</span></p>
+<p><span class="style11">&bull; 2018.3 - 2020.8: &nbsp;&nbsp; Research Scientist, Edgetic Ltd., UK </span></p> 
+<p><span class="style11">&bull; 2017.10 - 2020.8: &nbsp; Adjunct Research Fellow at University of Leeds, UK </span></p>
 </div>
 
 <hr style="width:100%;text-align:left;margin-left:0">
@@ -279,7 +291,10 @@ and 4) applied machine/deep learning for representation learning, anomaly detect
 
 <p><span class="style11">
 
-<p><span class="style11">&bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. <a href="paper/tpds2021-horus.pdf">Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 </a>
+<p><span class="style11">&bull; R.Yang', Y.Hei', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. <a href="paper/tnnls2021-hawk.pdf">Hawk: Rapid Android Malware Detection through Heterogeneous Graph Neural Network</a>. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021 </span></p>
+
+<p><span class="style11">&bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. <a href="paper/tpds2021-horus.pdf">Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 </span></p>
+
 <p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. <a href="paper/tc2021.pdf">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>.  IEEE Trans. on Computers (TC), 2021 </span></p>
 
 <p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu and L.He. <a href="paper/tkdd2021.pdf"> Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks</a>.  ACM Trans. on Knowledge Discovery from Data (TKDD), 2021 
@@ -293,15 +308,15 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&bull; P.Garraghan, X.Ouyang, R.Yang*, D.Mckee and J.Xu. <a href="paper/tsc2016b.pdf">Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters</a>. IEEE Trans. on Services Computing (TSC), 2019   </span></p>
 
-<p><span class="style11">&bull;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. <a href="paper/tsc2016.pdf">Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover</a>. IEEE Trans. on Services Computing (TSC), 2017</span></p>
+<p><span class="style11">&bull; R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. <a href="paper/tsc2016.pdf">Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover</a>. IEEE Trans. on Services Computing (TSC), 2017</span></p>
 
 <p><span class="style11">&bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091"> Software-Defined Fog Orchestration for IoT Services</a>. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1, 2020</span></p>
 
 <p><span class="style11">&bull; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. <a href="paper/ic2017.pdf">Fog Orchestration for IoT Services</a>. IEEE Internet Computing, 2017  </span></p>
 
-<p><span class="style11">&bull; R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. <a href="paper/socc2019-perphon.pdf">Perphon: a ML-based Agent for Workload Co-location via Performance Prediction and Resource Inference</a>. ACM Symposium on Cloud Computing (SoCC), 2019 </span></p>
+<p><span class="style11">&bull; R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. <a href="paper/ccgrid2021.pdf">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a>. IEEE/ACM CCGRID 2021 and ACM SoCC 2019 (poster, demo) </span></p>
 
-<p><span class="style11">&bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  <a href="paper/icdcs2018.pdf">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a>. IEEE ICDCS 2018 and ACM SOSP 2017 (poster)</span></p>
+<p><span class="style11">&bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  <a href="paper/icdcs2018.pdf">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a>. IEEE ICDCS 2018 and ACM SOSP 2017 (poster, demo)</span></p>
 
 <p><span class="style11">&bull;  Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang and J.Xu. <a href="paper/vldb2014.pdf">Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale</a>. VLDB 2014</span></p>
 
@@ -322,7 +337,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <p><span class="Bolder">Selected Research Grants </span></p>
 
 <p><span class="style11">  
-I have the opportunity to work closely with many institutes around the world and participate in many government/industry funded research projects to solve real-world problems with innovative cloud and analytic technologies.</span></p>
+I had the opportunity to work closely with many institutes around the world and engaged in many government/industry funded research projects to solve real-world problems with innovative cloud and analytic technologies.</span></p>
 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
@@ -359,12 +374,12 @@ I have been co-advising and/or working closely with many students mainly from CO
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
 <p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.5- , Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Gingfung Yeung (2018.1- , Lancaster University, UK, with Dr. Peter Garraghan), Yiming Hei (2019.9- , Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , Beihang Uni., with Prof. Jie Xu and Prof. Tianyu Wo) </span></p>
 
-<p><span class="style11">&bull; Undergraduate Final Year Project Students: Chris London, Charlee Boyle, Kunchaya Soinak, Sam Hepburn (Uni. of Leeds, 2020 Autumn) </span></p>
-
 <p><span class="style11">&bull; MSc Projects: Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo, Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
 
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
+
+<p><span class="style11">&bull; Chris London (BSc, 2021, Uni. of Leeds, first employment at Permutive UK), Charlee Boyle (BSc, 2021, Uni. of Leeds, first employment at IBM UK), Sam Hepburn (BSc, 2021, Uni. of Leeds, first employment at Knowledge Integration Ltd. UK) </span></p>
 
 <p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, Uni. of Leeds, with Prof. Jie Xu), Xiaochen Sun (2019.9-2020.9, Uni. of Leeds, Visiting PhD. Student from ISCAS, with Prof. Jie Xu) 
 </span></p> 
@@ -419,18 +434,20 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull; Area/Track Chair: IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
 
-<p><span class="style11">&bull; PC Member: IJCAI'21, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
+<p><span class="style11">&bull; PC Member: AAAI'22, IJCAI'21'22, ECAI'22, IEEE CLOUD'21'22, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
 
 
-<p><span class="style11">&bull; Journal Reviewers: IEEE TPDS, TDSC, TC, TSC, TSE, TCC, ACM CSUR, etc. </span></p> 
+<p><span class="style11">&bull; Journal Reviewers: IEEE TPDS, TDSC, TC, TKDE, TSC, TSE, TCC, ACM CSUR, etc. </span></p> 
 
 <p><span class="style11">&bull; More professional services can be found here: <a href="services.html">~$ services</a> </span></p>
 
 <p><span class="Bolder">Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&bull;   <strong>Outstanding Service Award </strong>, IEEE JCC-SOSE, 2020 </p>
+<p><span class="style11">&bull;   <strong>Outstanding Service Award</strong>, IEEE JCC-SOSE, 2020 </p>
 
-<p><span class="style11">&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (中国电子学会科技进步特等奖) </p>
+<p><span class="style11">&bull;   <strong>The Grand Class </strong> of Scientific and Technological Progress Award of Chinese Institute of Electronics, 2017 (2017年度中国电子学会科技进步特等奖) </p>
+<p><span class="style11">&bull;   The State Scientific and Technological Progress Award Nominee, 2018 (2018年度国家科学进步一等奖提名) </p>
+
 <p><span class="style11">&bull;   <strong>Outstanding Graduate Award </strong> of Beijing Graduates, 2017 </p>
 <p><span class="style11">&bull;  <strong>Guanghua Scholarship Award </strong> for outstanding students, 2014 </p>
 <p><span class="style11">&bull;   <strong>Best Paper Award</strong> of the IEEE 11th International Symposium on Autonomous Decentralized System(ISADS), 2013 </span></p>
@@ -468,7 +485,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">  updated by Feb. 2021 </span></p>
+<p><span class="style11">  Updated by August 2021 </span></p>
 
 </td>
 
