--- a/publications.html
+++ b/publications.html
@@ -104,20 +104,29 @@
 <hr style="width:100%;text-align:left;margin-left:0">
 
 <p lang="en-US"><span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= equal contribution </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= co-first author with equal contribution </span> &nbsp; &nbsp;</p>
 
 
 <p lang="en-US"><span class="red">2021</span></p>
 
-<p><span class="style11"> &bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 
+<p><span class="style11">&bull; Y.Hei', R.Yang', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS)  <a href="paper/tnnls2021.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">&bull; J.Zhu', R.Yang', C.Hu, T.Wo, S.Xue, J.Ouyang, J.Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID), <a href="paper/ccgrid2021.pdf">[paper]</a>  </span></p>
+
+<p><span class="style11"> &bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS) 
 <a href="paper/tpds2021-horus.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Transactions on Computers (TC), 2021 
+<p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Trans. on Computers (TC) 
 <a href="paper/tc2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu, L.He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Transactions on Knowledge Discovery from Data (TKDD), 2021 <a href="paper/tkdd2021.pdf">[paper]</a> 
+<p><span class="style11">&bull; Y.Song, T.Wo*, R.Yang*, Q.Shen and J.Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC)  <a href="paper/jpdc2021.pdf">[paper]</a> 
+</span></p>
+
+
+<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu, L.He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Transactions on Knowledge Discovery from Data (TKDD) <a href="paper/tkdd2021.pdf">[paper]</a> 
 </span></p>
 
 <p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, J.Li, and P.S.Yu. Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks. arXiv:2104.07886 <a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
@@ -150,7 +159,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 </span></p>
 
 
-<p><span class="style11">  &bull; C.Hu, J.Zhu, R.Yang*, H.Peng, T.Wo, S.Xue, X.Yu, J.Xu, R.Ranjan. Toposch: Latency-Aware Scheduling Based on Critical Path Analysis on Shared YARN Clusters. IEEE Conference on Cloud Computing (Cloud), 2020 
+<p><span class="style11">  &bull; C.Hu, J.Zhu, R.Yang*, H.Peng, T.Wo, S.Xue, X.Yu, J.Xu, R.Ranjan. Toposch: Latency-Aware Scheduling Based on Critical Path Analysis on Shared YARN Clusters. IEEE Conference on Cloud Computing (CLOUD), 2020 
 <a href="paper/cloud2020.pdf">[paper]</a> 
 </span></p>
 
@@ -297,7 +306,7 @@ A Method for Private Car Transportation Dispatching Based on a Passenger Demand 
 
 
 <p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> Updated by Dec. 2020 </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="incline"> Updated by August 2021 </span> &nbsp; &nbsp;</p>
 
 </p>
 </td>
