--- a/publications_topics.html
+++ b/publications_topics.html
@@ -136,6 +136,9 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 </span></p>
 
 
+<p><span class="style11">&bull; J.Zhu', R.Yang', C.Hu, T.Wo, S.Xue, J.Ouyang, J.Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID), 2021 <a href="paper/ccgrid2021.pdf">[paper]</a>  </span></p>
+
+
 <p><span class="style11">&bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. Software-Defined Fog Orchestration for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a>
 <a href="https://scholar.google.com/scholar?oi=bibs&cluster=10135161801314640093&btnI=1&hl=en"> [googlebook]</a> 
 <a href="">[preprint]</a>
@@ -175,6 +178,12 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 <p lang="en-US"><span class="red"> System Dependability: Reliability and Fault Tolerance </span></p>
 
+<p><span class="style11">&bull; Y.Hei', R.Yang', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021  <a href="paper/tnnls2021.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">&bull; Y.Song, T.Wo*, R.Yang*, Q.Shen and J.Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC), 2021  <a href="paper/jpdc2021.pdf">[paper]</a> 
+</span></p>
+
 <p><span class="style11">&bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019 
 <a href="paper/tpds2019-gapar-full.pdf">[full version]</a> <a href="paper/tpds2019-gapar.pdf">[paper]</a> 
@@ -209,7 +218,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 <p lang="en-US"><span class="red"> Big Data and Applied Machine Learning</span></p>
 
-<p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Transactions on Computers (TC), 2021 
+<p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Trans. on Computers (TC), 2021 
 <a href="paper/tc2021.pdf">[paper]</a> 
 </span></p>
 
@@ -286,7 +295,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 
 
 <p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> Updated by Dec. 2020 </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="incline"> Updated by August 2021 </span> &nbsp; &nbsp;</p>
 
 </p>
 </td>
