--- a/services.html
+++ b/services.html
@@ -100,9 +100,9 @@
 
 
 <p><span class="style11"><strong> (Co-) Chair:</strong></span></p>
-<p><span class="style11">&nbsp; IEEE International Conference on Joint Cloud Computing (JCC), 2020 </span></p>
-<p><span class="style11">&nbsp; IEEE JCC 2019 (in conjuction with IEEE SOSE 2019)</span></p>
-<p><span class="style11">&nbsp;IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) </span></p>
+<p><span class="style11">&nbsp; IEEE CLOUD 2021, Area Chair </span></p>
+<p><span class="style11">&nbsp; IEEE International Conference on Joint Cloud Computing (JCC), 2019, 2020, PC Co-Chair </span></p>
+<p><span class="style11">&nbsp; IEEE RTCPS 2014 (in conjuction with IEEE ISORC 2014) PC Co-Chair </span></p>
 
 <p><span class="style11"><strong> PC Member:</strong></span></p>
 <p><span class="style11">&nbsp;IEEE ESaaSA'14 (in conjuction with IEEE CLOSER 2014)</span></p>
@@ -110,21 +110,22 @@
 <p><span class="style11">&nbsp;IEEE FiCloud'16 (The IEEE 4th International Conference on Future Internet of Things and Cloud) </span></p>
 <p><span class="style11">&nbsp;IEEE/ACM BDCAT'16-'20  </span></p>
 <p><span class="style11">&nbsp;IEEE/ACM UCC'18-'20 </span></p>
+<p><span class="style11">&nbsp;IEEE CLOUD'20-'21' </span></p>
+<p><span class="style11">&nbsp;IJCAI'21-'23, AAAI'22, ECAI'22 </span></p>
 <p><span class="style11">&nbsp;IEEE Workshop on Monitoring and Analysis for HPC Systems Plus Applications (HPCMASPA), in conjunction with IEEE CLUSTER 2021 </span></p>
 
 <p><span class="style11"><strong> Conferences Organizer: </strong></span></p>
-<p><span class="style11">&nbsp; Organizer: IEEE ISORC'12, IEEE iVCE'12, CoLaB Workshop'12,CoLaB Workshop'13, CoLaB Workshop'14</span></p>
+<p><span class="style11">&nbsp;Organizer: IEEE ISORC'12, IEEE iVCE'12, CoLaB Workshop'12-'14</span></p>
 
 <p><span class="style11"><strong> Reviewer: </strong> </span></p>
 <p><span class="style11">&nbsp;IEEE Conferences: IEEE ICDCS, IEEE DSN, IEEE SRDS,  IEEE ISSRE, IEEE CloudCom, IEEE ICPADS, IEEE SOSE, IEEE CGC, IEEE CCDC, etc. </span></p>
-<p><span class="style11">&nbsp;IEEE/ACM Transactions/Journals:  IEEE Trans. on Computer(TC); IEEE Trans. on Parallel and Distributed System (TPDS); IEEE Trans. on Dependable and Secure Computing (TDSC); IEEE Trans. on Services Computing (TSC); IEEE Trans. on Software Engineering (TSE); IEEE Trans. on Reliability; IEEE Trans. on Cloud Computing (TCC); IEEE Trans. on Sustainable Computing; Transactions on Intelligent Systems and Technology (TIST); ACM Computing Survey (CSUR); IEEE IoT Journal; IEEE Computer, etc.
+<p><span class="style11">&nbsp;Journals: IEEE TC, IEEE TPDS, IEEE TDSC, IEEE TKDE, IEEE TSC, IEEE TSE, IEEE TCC, IEEE Trans. on Reliability, IEEE Trans. on Sustainable Computing; ACM Trans. on Intelligent Systems and Technology (TIST); ACM Computing Survey (CSUR); IEEE IoT Journal; IEEE Computer, Journal of Parallel and Distributed Computing (JPDC), etc.
 </span></p>
-<p><span class="style11">&nbsp;Other Journals like Journal of Parallel and Distributed Computing (JPDC), Future Generation Computing Systems (FGCS), Journal of Computer Science and Technology (JCST), etc. </span></p>
 
 
  
 <p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> Updated by Dec. 2020 </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="incline"> Updated by August 2021 </span> &nbsp; &nbsp;</p>
 
 </p>
 </td>
