--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <div id="div_team">
 
 
-<p><span class="Bolder">Research Team </span></p>
+<p><span class="Bolder">Student Supervision </span></p>
 
 
 <p><span class="style11"> 
@@ -383,11 +383,13 @@ I have been co-advising and/or working closely with many students mainly from CO
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
 <p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.5- , Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Gingfung Yeung (2018.1- , Lancaster University, UK, with Dr. Peter Garraghan), Yiming Hei (2019.9- , Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , Beihang Uni., with Prof. Jie Xu and Prof. Tianyu Wo) </span></p>
-<p><span class="style11">&bull; MSc Students: Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
+<p><span class="style11">&bull; BSc Students: Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2011-2022, Uni. of Leeds, with Prof. Jie Xu) </span></p>
 <p><span class="style11">&bull; Also closely working with Research Fellows: Dr. Satish Kumar, Dr. Clément Mommessin </span></p>
 
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
+
+<p><span class="style11">&bull; Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
 
 <p><span class="style11">&bull; Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (MSc. of COMP5200M, 2020 Autumn, Uni. of Leeds)
 <p><span class="style11">&bull; Chris London (BSc, 2021, Uni. of Leeds, first employment at Permutive UK), Charlee Boyle (BSc, 2021, Uni. of Leeds, first employment at IBM UK), Sam Hepburn (BSc, 2021, Uni. of Leeds, first employment at Knowledge Integration Ltd. UK) </span></p>
